2.2.1 - Turn Local Storage ID into variable for easier handling of multiple instances on the same domain - Clear retry interval when stopping or pausing playback - Fixed use of 'undefined' in a.oncanplaythrough - Better spacing for seek bar in full cover zoom/narrow mode

--- a/music.css
+++ b/music.css
@@ -19,7 +19,6 @@ html.touch body {
 		-webkit-user-select: none;
 		-webkit-touch-callout: none;
 	}
-	html.touch input[type=range] { margin-top: -.1em }
 	html.touch u { text-decoration: none }
 	html.touch ul { margin-left: .5em }
 	html.touch #current { line-height: 1.3em }
@@ -91,7 +90,7 @@ button {
 		text-shadow: none;
 	}
 
-input {
+input, select {
 	width: 29.5em;
 	max-width: calc(100% - 7.5em);
 	padding: .1em;
@@ -219,7 +218,8 @@ li.over { border-top: 1px dotted #ef6c00 }
 		text-align: center;
 	}
 		#player.fullzoom #cover { cursor: zoom-out }
-		#player.fullzoom #current, #player.fullzoom #seek { margin-top: .25em }
+		#player.fullzoom #current { margin-top: .25em }
+		#player.fullzoom #seek { margin-bottom: .25em }
 
 #current {
 	max-width: calc(100% - 8.5em);
@@ -376,7 +376,8 @@ li.over { border-top: 1px dotted #ef6c00 }
 		text-align: center;
 	}
 		#cover { max-height: 10em }
-		#current, #seek { margin-top: .25em }
+		#current { margin-top: .25em }
+		#seek { margin-bottom: .25em }
 	
 	#options { text-align: center }
 }
@@ -439,6 +440,7 @@ li.over { border-top: 1px dotted #ef6c00 }
 .folder:before { content: "\f150" }
 .folder.open:before { content: "\f14e" }
 .playing:before { content: "\f198" }
+.playlist:before { content: "\f18e" }
 .link:before { content: "\f165" }
 .song:before { content: "\f17b"; opacity: .6 }
 button.on:before { content: "\f126" !important }
